# keydeamon

./: .readthedocs.yml  404.html  CHANGELOG.md  PLAN.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
API/: index.html
assets/readme/: index.html
cli/: index.html
code-examples/: index.html
docs/: API.md  cli.md  examples.md  index.md  safety.md
examples/: autoclicker.py  flower.py  index.html
safety/: index.html
search/: search_index.json
src/keydaemon/: __init__.py  __main__.py  _paths.py  _types.py  actions.py  builder.py  cli.py  export.py  guard.py  loader.py  profile.py  runner.py  scheduler.py  screen.py
src/keydaemon/presets/: __init__.py  autoclicker.py  minecraft_afk.py
tests/: conftest.py  test_actions.py  test_builder.py  test_cli.py  test_export.py  test_guard.py  test_loader.py  test_presets.py  test_runner.py  test_scheduler.py  test_screen.py
