[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "keydaemon"
version = "0.1.0"
description = "Background daemon for keyboard/mouse automation — for gamers and developers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "click>=8.0",
    "Pillow>=10.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]
authors = [
    { name = "MLMecham", email = "mechamit000@gmail.com" },
]
maintainers = [
    { name = "MLMecham", email = "mechamit000@gmail.com" },
]

[project.scripts]
keydaemon = "keydaemon.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
# uv-specific configuration
